# esphome-desktop

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  latest.schema.json  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/scripts/: _gha.py  bump_bundle_versions.py  check_file_size.py  determine_jobs.py  set_version.py  (+5 more)
build-scripts/: download_python.sh  macos_build_retry.sh  prepare_bundle.sh  sign_macos_local.sh  sign_python_bundle.sh  stage_quick_sharun.sh  write_base_manifest.py
src-tauri/: Cargo.toml  Info.plist  build.rs  installer-hooks.nsi  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: device_builder_maintenance.py
src-tauri/src/: cli.rs  dialog.rs  lib.rs  main.rs
src-tauri/src/app_update/: mod.rs
src-tauri/src/control/: client.rs  mod.rs  ops.rs  protocol.rs  server.rs  update_check.rs
src-tauri/src/control/client/: logs.rs  mod.rs
src-tauri/src/daemon/: mod.rs
src-tauri/src/git_check/: mod.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/platform/: base_manifest.rs  health.rs  linux.rs  macos.rs  mod.rs  pip.rs  process.rs  python_env.rs  windows.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/tray/: events.rs  mod.rs
src-tauri/src/update/: install.rs  mod.rs  notify.rs  version.rs
src-tauri/src/util/: mod.rs
src-tauri/translations/: en.json
tests/: conftest.py  script_loader.py  test_bump_bundle_versions.py  test_check_file_size.py  test_determine_jobs.py  test_device_builder_maintenance.py  test_generate_latest_json.py  test_set_version.py  test_translations.py  test_write_base_manifest.py
web/: index.html
(+36 files in other folders)
