[package]
name = "esphome-desktop"
version = "0.1.0"
description = "Desktop application for ESPHome"
authors = ["ESPHome Team"]
license = "Apache-2.0"
repository = "https://github.com/esphome/esphome"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "esphome_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for health checks and update checking
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Open URLs/files with default application
open = "5"

# Home directory detection
dirs = "5"

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies if needed

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
